changed print volume for inches, added logo for favicon

--- a/confirmation.html
+++ b/confirmation.html
@@ -1,7 +1,7 @@
 <p>&nbsp;</p>
 <table
   role="presentation"
-  border="1"
+  border="0"
   width="100%"
   cellspacing="0"
   cellpadding="0"
@@ -12,10 +12,10 @@
         <table
           style="
             border-collapse: collapse;
-            border: 1px solid #cccccc;
+            border: 0px solid #cccccc;
             width: 599px;
           "
-          border="1"
+          border="0"
           width="600"
           cellspacing="0"
           cellpadding="0"
@@ -42,7 +42,7 @@
               <td style="padding: 40px 30px; width: 537px" bgcolor="#ffffff">
                 <table
                   style="border-collapse: collapse"
-                  border="1"
+                  border="0"
                   width="100%"
                   cellspacing="0"
                   cellpadding="0"
@@ -66,14 +66,14 @@
                           font-family: Arial, sans-serif;
                           font-size: 16px;
                           line-height: 24px;
-                          padding: 20px 0 30px 0;
+                          padding: 0 0 0 0;
                         "
                       >
                         <p style="margin: 20">
                             Please click this button to confirm your email and activate your account:
                             <table
                                 style="border-collapse: collapse"
-                                border="1"
+                                border="0"
                                 width="100%"
                                 cellspacing="0"
                                 cellpadding="0"
@@ -82,7 +82,7 @@
                                     <td  width="153"  valign="top">
                                         &nbsp;
                                     </td>
-                                    <td width="134" height="29"><table border="1" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
+                                    <td width="134" height="29"><table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                                         <tr>
                                             <td>
                                                 <img src="https://i.ibb.co/6HqX43Q/Asset-8.png" alt="" width="100%" height="34" style="display: block;" />
@@ -104,11 +104,11 @@
                           font-family: Arial, sans-serif;
                           font-size: 16px;
                           line-height: 24px;
-                          padding: 20px 0 30px 0;
+                          padding: 0 0 0 0;
                         "
                       >
                         <p >
-                            Please click this button to confirm your email and activate your account:
+                            If this doesn't work, please follow this link <a href="https://thriftyprint.io/confirm">thriftyprint.io/confirm</a>
                            
                           
 
@@ -126,7 +126,7 @@
               <td style="padding: 30px; width: 537px" bgcolor="#ee4c50">
                 <table
                   style="border-collapse: collapse"
-                  border="1"
+                  border="0"
                   width="100%"
                   cellspacing="0"
                   cellpadding="0"
@@ -135,38 +135,39 @@
                     <tr>
                       <td
                         style="
-                          color: #ffffff;
+                          color: #912226;
                           font-family: Arial, sans-serif;
                           font-size: 14px;
                         "
                       >
                         <p style="margin: 0">
-                          &reg; Someone, somewhere 2025<br /><a
-                            style="color: #ffffff"
-                            href="#"
-                            >Unsubscribe</a
+                          &reg; ThriftyPrint 2021<br />
+                          Email questions and bug reports to
+                          <a
+                            style="color: #912226"
+                            href="mailto:feedback@thriftyprint.io"
+                            >feedback@thriftyprint.io</a
                           >
-                          to this newsletter instantly
                         </p>
                       </td>
                       <td align="right">
                         <table
                           style="border-collapse: collapse"
-                          border="1"
+                          border="0"
                           cellspacing="0"
                           cellpadding="0"
                         >
                           <tbody>
                             <tr>
                               <td>
-                                <a href="http://www.twitter.com/">
+                                <a href="https://thriftyprint.io/">
                                   <img
                                     style="display: block"
-                                    src="https://assets.codepen.io/210284/tw.gif"
+                                    src="https://i.ibb.co/tMGw7yW/website-icon-01.png"
                                     alt="Twitter."
                                     width="38"
                                     height="38"
-                                    border="1"
+                                    border="0"
                                   />
                                 </a>
                               </td>
@@ -176,7 +177,7 @@
                               >
                                 &nbsp;
                               </td>
-                              <td>
+                              <!-- <td>
                                 <a href="http://www.twitter.com/">
                                   <img
                                     style="display: block"
@@ -184,10 +185,10 @@
                                     alt="Facebook."
                                     width="38"
                                     height="38"
-                                    border="1"
+                                    border="0"
                                   />
                                 </a>
-                              </td>
+                              </td> -->
                             </tr>
                           </tbody>
                         </table>
